--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <td><h1> HTML Test</h1>
                     <i> <em>Just a <strong> Test </strong><a href="https://www.google.com/">Google</a> program </em></i>
                     <p>It is a test paragraph to see if the format is good an working.It is a test paragraph to see if the format is good an working.</p>
-                    <p><a href="http://localhost:63342/website/Contact-me.html?_ijt=b168d5k6jdtfuen1upf3hm0sjl&_ij_reload=RELOAD_ON_SAVE"> Contacts </a></p>
+                    <p><a href="Contact-me.html"> Contacts </a></p>
                 </td>
             </tr>
         </table>
@@ -38,7 +38,7 @@
         <dl> <!-- Description list -->
             <dt>Milk</dt>
             <dd>- White drink</dd>
-            <dt><a href="http://localhost:63342/website/ingerients.html?_ijt=6qpfg6h4tqfmipbsn54vrt3ddn&_ij_reload=RELOAD_ON_SAVE">Coffee</a></dt>
+            <dt><a href="ingredients.html">Coffee</a></dt>
             <dd>- Black hot drink</dd>
         </dl>
          <hr size="3" noshade>
