--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <td><h1> HTML Test</h1>
                     <i> <em>Just a <strong> Test </strong><a href="https://www.google.com/">Google</a> program </em></i>
                     <p>It is a test paragraph to see if the format is good an working.It is a test paragraph to see if the format is good an working.</p>
-                    <p><a href="Contact-me.html"> Contacts </a></p>
+                    <p><a href="contact-me.html"> Contacts </a></p>
                 </td>
             </tr>
         </table>
